--- a/01-Notifications-Menu/style.css
+++ b/01-Notifications-Menu/style.css
@@ -3,3 +3,217 @@
   padding: 0;
   margin: 0;
 }
+
+:root {
+  --light-blue: #0072fa;
+  --dark-blue: #3475dd;
+  --greyish-white: #f6f6f6;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+
+  display: grid;
+  place-items: center;
+  min-height: 100vh;
+  font-size: 1.6rem;
+  background-color: var(--greyish-white);
+  color: #373737;
+  padding: 0 2.4rem;
+}
+
+main {
+  max-width: 54rem;
+  background-color: #fff;
+  padding: 1.2rem 2.4rem 2.4rem 2.4rem;
+  border-radius: 9px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.card-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1.6rem;
+}
+
+.noti-text {
+  font-weight: 600;
+}
+
+.read-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.6rem;
+}
+
+.icon-tabler-checks {
+  stroke: var(--dark-blue);
+  width: 2.8rem;
+}
+
+.read-text {
+  font-weight: 600;
+  color: var(--dark-blue);
+  cursor: pointer;
+  border-bottom: 2.5px solid #fff;
+  transition: all 0.3s;
+}
+
+.read-text:hover {
+  border-bottom: 2.5px solid var(--dark-blue);
+}
+
+.notification-list {
+  border-bottom: 2px solid #ddd;
+}
+
+.notification-list li {
+  list-style: none;
+
+  display: flex;
+  align-items: flex-start;
+  gap: 2.8rem;
+  margin-bottom: 1.2rem;
+  padding: 1.6rem;
+  border-radius: 11px;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+
+.notification-list li:last-child {
+  margin-bottom: 2.4rem;
+}
+
+.notification-list li:hover {
+  background-color: var(--greyish-white);
+}
+
+.notification-list li:hover .message {
+  color: var(--dark-blue);
+}
+
+.fill {
+  width: 18px;
+  height: 13px;
+  background-color: var(--light-blue);
+  border-radius: 50%;
+  display: block;
+  margin-top: 8px;
+}
+
+.message {
+  font-weight: 600;
+  line-height: 1.4;
+  padding-right: 2.6rem;
+}
+
+.message-details {
+  font-size: 1.4rem;
+  font-weight: 400;
+  margin-top: 0.6rem;
+  color: #666;
+
+  display: block;
+}
+
+img {
+  width: 14%;
+  height: auto;
+}
+
+.icon-tabler-mail,
+.icon-tabler-info-circle {
+  background-color: var(--light-blue);
+  stroke: #fff;
+  width: 18%;
+  height: auto;
+  padding: 10px;
+  border-radius: 50%;
+}
+
+.card-footer {
+  padding-top: 1.6rem;
+}
+
+.view-all:link,
+.view-all:visited {
+  color: var(--dark-blue);
+  text-decoration: none;
+  font-weight: 600;
+  transition: all 0.3s;
+  border-bottom: 2.5px solid #fff;
+}
+
+.view-all:hover,
+.view-all:active {
+  border-bottom: 2.5px solid var(--dark-blue);
+}
+
+/*******************/
+/* MEDIA QUERIES */
+/*******************/
+
+/* 528px or below */
+@media (max-width: 33em) {
+  html {
+    font-size: 50%;
+  }
+
+  .message {
+    line-height: 1.2;
+  }
+
+  .fill {
+    width: 14px;
+    height: 10px;
+    margin-top: 4px;
+  }
+
+  .icon-tabler-mail,
+  .icon-tabler-info-circle {
+    padding: 6px;
+  }
+}
+
+/* 400px or below */
+@media (max-width: 25em) {
+  main {
+    padding: 1.2rem;
+  }
+
+  .notification-list li {
+    gap: 1.8rem;
+  }
+
+  .noti-text,
+  .read-text,
+  .view-all:link,
+  .view-all:visited {
+    font-size: 1.4rem;
+  }
+
+  .message {
+    padding-right: 0;
+    font-size: 1.4rem;
+  }
+
+  .message-details {
+    font-size: 1.2rem;
+  }
+
+  img {
+    width: 16%;
+  }
+
+  .icon-tabler-info-circle,
+  .icon-tabler-mail {
+    width: 20%;
+  }
+}
